--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.android.freelance.mvvm">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".MVVMApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_mvvm"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_mvvm"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".ui.home.HomeActivity"></activity>
         <activity android:name=".ui.auth.LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.auth.SignUpActivity">
-
-        </activity>
+        <activity android:name=".ui.auth.SignUpActivity"></activity>
     </application>
 
 </manifest>
