--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        //createprocess error=206 the filename or extension is too long
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
@@ -14,9 +17,11 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationsafeargs_verison"
-
+        classpath("gradle.plugin.ua.eshepelyuk:ManifestClasspath:1.0.0")//createprocess error=206 the filename or extension is too long
     }
 }
+
+apply plugin: "ua.eshepelyuk.ManifestClasspath" //createprocess error=206 the filename or extension is too long
 
 allprojects {
     repositories {
