--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,8 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.android.freelance.mvvm"
-        minSdkVersion 23
+        /*minSdkVersion 23*/
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
