--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
+    //OkHttp Logging
+    def okhttp3_logging_version = '3.12.1'
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_logging_version"
+
     //Kotlin Coroutines
     def coroutines_version = '1.1.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
